Initial layout complete, added star quality display

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 ---
-layout : none
+layout : LaserTable
 ---
 
 <div style = "width:750px; margin-left:auto; margin-right:auto;">
 	<img src = "{{ "/assets/images/Harbinger.png " | relative_url }}" style = "width:750px;" />
 </div>
 	
-<a href = "{{ "MonthlyScores " | relative_url }}" > Monthly Laserforce Scores for Edinburgh</a>
+<center>
+<a href = "{{ "MonthlyScores " | relative_url }}" > Monthly Laserforce Scores for Edinburgh</a> <br/>
+<a href = "{{ "StarQuality " | relative_url }}" > The Star players of Edinburgh</a>
+</center>
