--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-layout : LaserTable
+layout : LaserSplash
 ---
 
 <div style = "width:750px; margin-left:auto; margin-right:auto;">
-	<img src = "{{ "/assets/images/Harbinger.png " | relative_url }}" style = "width:750px;" />
+	<img src = "{{ "/assets/images/Harbinger.png " | relative_url }}" style = "width:750px; margin-top:-90px;" />
 </div>
 	
 <center>
